--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,16 @@ language: python
 python:
   - "3.11"
 install:
-  - pip3 install .
-  - pip3 install -r requirements.txt
-  - pip3 install coverage
-  - pip3 install pylint
-  - pip3 install pytest
+  - pip install .
+  - pip install -r requirements.txt
+  - pip install coverage
+  - pip install pylint
+  - pip install pytest
   - git clone https://github.com/kerrickstaley/genanki; cd genanki; python setup.py install; cd ..
+jobs:
+  include:
+    - name: project-1
+      python: "3.11"
 script:
   - python -m pytest -v test/
   - coverage run --source ./code/ -m pytest -v ./test/
