--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: python
+dist: bionic
+before_install:
+  - "sudo apt-get install python3.11"
 python:
-  - "3.8"
+  - "3.11"
 install:
   - pip install .
   - pip install -r requirements.txt
@@ -11,7 +14,7 @@ install:
 jobs:
   include:
     - name: project-1
-      python: "3.8"
+      python: "3.11"
 script:
   - python -m pytest -v test/
   - coverage run --source ./code/ -m pytest -v ./test/
