--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 dist: bionic
 before_install:
-  - "sudo apt-get install python3.11"
+  - sudo apt-get install python3.11
 python:
   - "3.11"
 install:
