--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,44 +1,21 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
+name: Flake8 Style Check
 
-name: Python application
-
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
+on: [push, pull_request]
 
 jobs:
-  build:
-
+  flake8:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
+    - name: Check out code
+      uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
       with:
-        python-version: "3.11"
-    - name: Install dependencies
+        python-version: 3.11
+    - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install .
         pip install flake8
-        pip install -r requirements.txt
-        pip install coverage
-        pip install pylint
-        pip install pytest
-        git clone https://github.com/kerrickstaley/genanki; cd genanki; python setup.py install; cd ..
-    - name: Lint with flake8
+    - name: Run flake8
       run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        pytest
+        flake8 . 
