--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -12,10 +12,12 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.11
+      
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8
+    
     - name: Run flake8
       run: |
-        flake8 . 
+        flake8 --ignore=E501,E402,E722, W291, F403, F405, F401, E203, E225, E231, E303, E402, W293 .
