--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,3 +19,7 @@ jobs:
       - name: Run flake8
         run: |
           flake8 .
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
