--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,6 +20,4 @@ jobs:
         run: |
           flake8 .
       - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v3
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        run: bash <(curl -s https://codecov.io/bash) -t 9ed4024e-0d99-482b-9214-a5c2f40dc033
